@@ -39,7 +39,7 @@ public class FactoryHelper {
 
     static {
         try {
-            Class cl = Class.forName("java.lang.ClassLoader");
+            Class<?> cl = Class.forName("java.lang.ClassLoader");
             defineClass1 = SecurityActions.getDeclaredMethod(
                         cl,
                         "defineClass",
@@ -62,8 +62,8 @@ public class FactoryHelper {
      *
      * @throws RuntimeException     if a given type is not a primitive type.
      */
-    public static final int typeIndex(Class type) {
-        Class[] list = primitiveTypes;
+    public static final int typeIndex(Class<?> type) {
+        Class<?>[] list = primitiveTypes;
         int n = list.length;
         for (int i = 0; i < n; i++)
             if (list[i] == type)
@@ -75,7 +75,7 @@ public class FactoryHelper {
     /**
      * <code>Class</code> objects representing primitive types.
      */
-    public static final Class[] primitiveTypes = {
+    public static final Class<?>[] primitiveTypes = {
         Boolean.TYPE, Byte.TYPE, Character.TYPE, Short.TYPE, Integer.TYPE,
         Long.TYPE, Float.TYPE, Double.TYPE, Void.TYPE
     };
@@ -131,7 +131,7 @@ public class FactoryHelper {
      *
      * @see #toClass(ClassFile,ClassLoader,ProtectionDomain)
      */
-    public static Class toClass(ClassFile cf, ClassLoader loader)
+    public static Class<?> toClass(ClassFile cf, ClassLoader loader)
         throws CannotCompileException
     {
         return toClass(cf, loader, null);
@@ -143,7 +143,7 @@ public class FactoryHelper {
      * @param domain        if it is null, a default domain is used.
      * @since 3.3
      */
-    public static Class toClass(ClassFile cf, ClassLoader loader, ProtectionDomain domain)
+    public static Class<?> toClass(ClassFile cf, ClassLoader loader, ProtectionDomain domain)
             throws CannotCompileException
     {
         try {
@@ -152,13 +152,13 @@ public class FactoryHelper {
             Object[] args;
             if (domain == null) {
                 method = defineClass1;
-                args = new Object[] { cf.getName(), b, new Integer(0),
-                        new Integer(b.length) };
+                args = new Object[] { cf.getName(), b, Integer.valueOf(0),
+                        Integer.valueOf(b.length) };
             }
             else {
                 method = defineClass2;
-                args = new Object[] { cf.getName(), b, new Integer(0),
-                        new Integer(b.length), domain };
+                args = new Object[] { cf.getName(), b, Integer.valueOf(0),
+                        Integer.valueOf(b.length), domain };
             }
 
             return toClass2(method, loader, args);
@@ -174,12 +174,12 @@ public class FactoryHelper {
         }
     }
 
-    private static synchronized Class toClass2(Method method,
+    private static synchronized Class<?> toClass2(Method method,
                                         ClassLoader loader, Object[] args)
         throws Exception
     {
         SecurityActions.setAccessible(method, true);
-        Class clazz = (Class)method.invoke(loader, args);
+        Class<?> clazz = (Class<?>)method.invoke(loader, args);
         SecurityActions.setAccessible(method, false);
         return clazz;
     }
